fix alignment issue with codeblocks

--- a/components/MDX/Pre/style.module.css
+++ b/components/MDX/Pre/style.module.css
@@ -1,7 +1,5 @@
 .container {
   position: relative;
-  margin-left: -32px;
-  margin-right: -32px;
 }
 
 .marginTop48 {
@@ -26,7 +24,7 @@
 }
 
 .pre code {
-  padding: 0 1rem;
+  padding: 0 0.7rem;
   font-weight: normal;
   background-color: transparent;
 }
@@ -44,5 +42,16 @@
 
   .pre code {
     padding: 0;
+  }
+}
+
+@media (max-width: 750px) {
+  .container {
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
   }
 }
